--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 body {
   font-family: "Poppins", Arial, sans-serif;
   padding: 0 30%;
-  background: url(Hero.png);
+  background: url("assets/Hero.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
